[metadata]
name = ConcatMap
version = 1.0.0
author = Daryl Gohl
author_email = dmgohl@umn.edu
description = A program to map and plot reads against a circular reference.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/darylgohl/ConcatMap
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    biopython>=1.79
    matplotlib>=3.5.1
    scipy>=1.7.3
    numpy>=1.21.5
    pysam>=0.19.1
python_requires = >=3.7

[options.entry_points]
console_scripts =
    concatmap = ConcatMapper_v1.0:main